# lumberjack

./: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
daqmx-rs/: Cargo.toml
lumberdaq/: Cargo.toml  README.md  test_results.csv  test_results.hdf  test_results.hdf5  test_results.json
lumberdaq/examples/simulated_devices/: config.json  main.rs  test_results.csv  test_results.hdf  test_results.json
lumberdaq/src/: channel.rs  configuration.rs  daq.rs  datapoint.rs  device.rs  devices.rs  error.rs  hardware.rs  lib.rs  main.rs  storage.rs  storage_csv.rs  storage_hdf.rs
lumberdaq/src/examples/simulated_devices/: config.json
lumberdaq/src/hardware/: firmata.rs  mock_hardware.rs  ni_usb6001.rs  serial_stream.rs
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: mock_config.json
src-tauri/src/: hardware_serial.rs  load.rs  main.rs  plugins.rs  serial.rs
src-tauri/src/hardware_plugins/: mock_sensor.rs  mod.rs  plugin_common.rs
src/lib/: SerialPorts.svelte  stores.ts  tools.ts  types.ts
src/lib/context-menu/: ContextMenu.svelte  ContextMenuDivider.svelte  ContextMenuOption.svelte
src/lib/explorer-item-dashboard/: ExplorerItemDashboard.svelte
src/lib/hardware-plugins/: HardwarePluginArduino.svelte
src/lib/widgets/: WidgetNumeric.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/add_device/: +page.svelte
src/routes/configuration/: +page.svelte
src/routes/dashboard/: +page.svelte
src/routes/dashboard/[slug]/: +page.svelte
src/routes/device/[slug]/: +page.svelte
(+1 files in other folders)
