[package]
name = "lumberdaq"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.1"
# hdf5 = { git = "https://github.com/aldanor/hdf5-rust.git" }
hdf5 = { package = "hdf5-metno", version = "0.10.0" }
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serialport = { version = "4.5.0", features = ["serde"] }
daqmx = { path = "../daqmx-rs", version = "0.0.1" }
ndarray = "0.16.1"

[lib]
name = "lumberdaq"